# configgen-rs

./: Cargo.toml  README.md
src/: lib.rs
src/enums/: mod.rs  serialization_format.rs
src/errors/: mod.rs
src/initialization/: mod.rs
src/traits/: default_config.rs  mod.rs
src/utils/: mod.rs
